// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`10 days 1`] = `
<div
  className="overview-legend overview-legend-spaced-line"
>
  overview.new_code_period_x.overview.period.days.10
</div>
`;

exports[`date 1`] = `
<Tooltip
  overlay={
    <DateFormatter
      date={2013-09-21T22:00:00.000Z}
      long={true}
    >
      [Function]
    </DateFormatter>
  }
>
  <div
    className="overview-legend"
  >
    overview.new_code_period_x.overview.period.date.formatted.2013-01-01
    <br />
    <DateFromNow
      date={2013-09-21T22:00:00.000Z}
    >
      <Component />
    </DateFromNow>
  </div>
</Tooltip>
`;

exports[`manual_baseline 1`] = `
<div
  className="overview-legend"
>
  overview.new_code_period_x.overview.period.manual_baseline.formattedTime.2013-09-22T00:00:00+0200
  <br />
  <DateFromNow
    date={2013-09-21T22:00:00.000Z}
  >
    <Component />
  </DateFromNow>
</div>
`;

exports[`manual_baseline 2`] = `
<div
  className="overview-legend"
>
  overview.new_code_period_x.overview.period.previous_version.1.1.2
  <br />
  <DateFromNow
    date={2013-09-21T22:00:00.000Z}
  >
    <Component />
  </DateFromNow>
</div>
`;

exports[`previous_analysis 1`] = `
<div
  className="overview-legend"
>
  overview.new_code_period_x.overview.period.previous_analysis.
  <br />
  <DateFromNow
    date={2013-09-21T22:00:00.000Z}
  >
    <Component />
  </DateFromNow>
</div>
`;

exports[`previous_version 1`] = `
<div
  className="overview-legend"
>
  overview.new_code_period_x.overview.period.previous_version_only_date
  <br />
  <DateFromNow
    date={2013-09-21T22:00:00.000Z}
  >
    <Component />
  </DateFromNow>
</div>
`;

exports[`should render a more precise date 1`] = `
<Tooltip
  overlay={
    <DateTimeFormatter
      date={2018-08-16T22:00:00.000Z}
    >
      [Function]
    </DateTimeFormatter>
  }
>
  <div
    className="overview-legend"
  >
    overview.new_code_period_x.overview.period.previous_version_only_date
    <br />
    <DateFromNow
      date={2018-08-16T22:00:00.000Z}
    >
      <Component />
    </DateFromNow>
  </div>
</Tooltip>
`;

exports[`version 1`] = `
<div
  className="overview-legend"
>
  overview.new_code_period_x.overview.period.version.0.1
  <br />
  <DateFromNow
    date={2013-09-21T22:00:00.000Z}
  >
    <Component />
  </DateFromNow>
</div>
`;
